A.F....... [ZBX-1357] updated Brazilian Portuguese, Japanese, Polish, Russian and Slovak translations; thanks to Zabbix translators (Richlv)
..F....... [ZBX-7399] improved multiselect by adding popup select window (Oleg)
..F....... [ZBX-8113] changed frontend configuration wizard to store info in session instead of cookies (Andrejs)

Bug fixes:
..F....... [ZBX-7459] fixed saving and editing of regular expression having trailing, leading, or repeating spaces (Andrejs)
..F....... [ZBX-1268] fixed log trigger expression editor to show only usable sorting arrows (Andrejs)
..F....... [ZBX-8285] fixed widget "History of events" and frontend messaging to use visible host names (Krists)
A.F....... [ZBX-8151] fixed XXE vulnerability on XML import using obsolete libxml versions; thanks to pnig0s@Freebuf for the report (Andrejs)
..F....... [ZBX-8354] removed period in caption for "Distribution of values for multiple periods" bar report (Andrejs)
.......PS. [ZBX-8092] fixed items being polled at the same time after host becomes enabled (asaveljevs)
.......PS. [ZBX-8324] fixed there being too many expressions in a list in a SQL query (asaveljevs)
..F....... [ZBX-8355] changed confusing context for date format translations (Andrejs)
..F.I..... [ZBX-7921] fixed default values for screen item colspan/rowspan to 1 in frontend and database (Krists, wiper)
..F....... [ZBX-8288] fixed problems with vertical table headers sometimes being offset (Krists)
...G...... [ZBX-8213] fixed possible crash when processing eventlog on Windows 2000,2003,XP (wiper)
.......PS. [ZBX-8040] wait for proper SMTP response before sending first command (wiper)
..F....... [ZBX-8358] fixed overview screen elements being displayed incorrectly after refreshing (Pavels)
..F....... [ZBX-8196] added validation for sorting parameters (Andrejs)
A.F....... [ZBX-8334] fixed selecting group prototypes in HostPrototype::get() using Oracle backend (Andrejs)