@@ -330,12 +330,12 @@ int	VFS_FILE_REGEXP(AGENT_REQUEST *request, AGENT_RESULT *result)
 			continue;
 
 		utf8 = convert_to_utf8(buf, nbytes, encoding);
+		zbx_rtrim(utf8, "\r\n");
 		ptr = zbx_regexp_sub(utf8, regexp, output);
 		zbx_free(utf8);
 
 		if (NULL != ptr)
 		{
-			zbx_rtrim(ptr, "\r\n ");
 			SET_STR_RESULT(result, ptr);
 			break;
 		}
@@ -452,6 +452,7 @@ int	VFS_FILE_REGMATCH(AGENT_REQUEST *request, AGENT_RESULT *result)
 			continue;
 
 		utf8 = convert_to_utf8(buf, nbytes, encoding);
+		zbx_rtrim(utf8, "\r\n");
 		if (NULL != zbx_regexp_match(utf8, regexp, &len))
 			res = 1;
 		zbx_free(utf8);
