@@ -158,7 +158,7 @@ int	WEB_PAGE_PERF(AGENT_REQUEST *request, AGENT_RESULT *result)
 int	WEB_PAGE_REGEXP(AGENT_REQUEST *request, AGENT_RESULT *result)
 {
 	char		*hostname, *path_str, *port_str, *regexp, *length_str, path[MAX_STRING_LEN],
-			*buffer = NULL, *ptr = NULL;
+			*buffer = NULL, *ptr = NULL, *s, *p;
 	int		length;
 	const char	*output;
 	unsigned short	port_number;
@@ -216,7 +216,23 @@ int	WEB_PAGE_REGEXP(AGENT_REQUEST *request, AGENT_RESULT *result)
 	buffer = zbx_malloc(buffer, ZBX_MAX_WEBPAGE_SIZE);
 
 	if (SYSINFO_RET_OK == get_http_page(hostname, path, port_number, buffer, ZBX_MAX_WEBPAGE_SIZE))
-		ptr = zbx_regexp_sub(buffer, regexp, output);
+	{
+		for (s = buffer, p = s; '\0' != *s; s++)
+		{
+			if ('\n' == *s)
+			{
+				if (s > p && '\r' == *(s - 1))
+					*(s - 1) = '\0';
+				else
+					*s = '\0';
+
+				if (NULL != (ptr = zbx_regexp_sub(p, regexp, output)))
+					break;
+
+				p = s + 1;
+			}
+		}
+	}
 
 	if (NULL != ptr)
 		SET_STR_RESULT(result, ptr);
